--- a/config/glove80.conf
+++ b/config/glove80.conf
@@ -1,3 +1,7 @@
 # Set sleep timeout to 30min (30*60*1000ms)
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Debounce timing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=25
