use custom firmware

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
 name: Build
-
 on: [push, pull_request, workflow_dispatch]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,8 +9,8 @@ jobs:
           submodules: recursive
       - uses: actions/checkout@v4
         with:
-          repository: moergo-sc/zmk
-          ref: main
+          repository: mammothb/zmk
+          ref: feat/qmk-caps-word
           path: src
       - uses: cachix/install-nix-action@v25
         with:
